--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Delete.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Delete.cshtml
@@ -4,37 +4,67 @@
 @{
     ViewData["Title"] = "Delete";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-<h1>Delete</h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <title>Startside</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>LokalerInfo</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Lokalenummer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Lejer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Lejer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Medarbejderantal)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Medarbejderantal)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="LokalerInfo.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
-</div>
+@if (SignInManager.IsSignedIn(User))
+{
+
+    <h1>Delete</h1>
+
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>LokalerInfo</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.LokalerInfo.Lokalenummer)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.LokalerInfo.Lejer)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.LokalerInfo.Lejer)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.LokalerInfo.Medarbejderantal)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.LokalerInfo.Medarbejderantal)
+            </dd>
+        </dl>
+
+        <form method="post">
+            <input type="hidden" asp-for="LokalerInfo.ID" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-page="./Index">Back to List</a>
+        </form>
+    </div>
+}
+
+else
+
+{
+    <p class="novifont headline mt-3 mb-3">
+        Du skal være logget ind for at redigere i databasen.
+    </p>
+    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
+        Klik her for at logge ind
+    </button>
+    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+        Klik her for at returnere til forsiden
+    </button>
+}
