--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Details.cshtml
@@ -70,12 +70,9 @@ else
 
         <div class="row">
             <div class="col-3">
-                <img src = "\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
-                <img src = "\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1"/>
-                <img src = "\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid"/>
-            </div>
-            <div class="col-9">
-                <input type = "text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
+                <img src ="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src ="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1"/>
+                <img src ="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid"/>
             </div>
         </div>
     </div>
@@ -88,13 +85,16 @@ else
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type = "button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/index'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
+                Søg
+            </button>
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/Oversigtskort'">
                 Oversigtskort
             </button>
-            <button type = "button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/parkering'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/ParkeringPage/Create'">
                 Parkering
             </button>
-            <button type = "button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
                 Faq
             </button>
         </div>
