--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Index.cshtml
@@ -22,23 +22,44 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-
-
-
-
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<form>
-    <p>
-        Søg efter nummeret på et lokale:
-        <br />
-        <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
-    </p>
-</form>
-<table class="table">
+<body>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-3">
+            <img src = "\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src = "\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+            <img src = "\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+        </div>
+        <div class="col-9">
+            <div class="row">
+                <div class="col-12">
+                    <form class="searchbox text-center">
+                        <input type="text" placeholder="Søg efter lokalenummer" class=" searchbar novidgrey novifont" asp-for="SearchString"/>
+                        <button type="submit" class="searchbtn novidgrey"><i class="fa fa-search"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <hr class="mb-4 orangeline noviyellow" />
+    </div>
+</div>
+<div class="row">
+    <div class="col-12 mb-3">
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow text-center create shadow"
+                onclick="window.location.href = '/LokalerPage/Create'">
+            Opret nyt lokale
+        </button>
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow text-center create shadow"
+                onclick="window.location.href = '/Identity/Account/AdminNavi'">
+            Tilbage til Admin Panel
+        </button>
+    </div>
+</div>
+<table class="table novifont">
     <thead>
         <tr>
             <th>
@@ -56,9 +77,7 @@
     <tbody>
         @foreach (var item in Model.LokalerInfo)
         {
-
-
-        <tr>
+            <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Lokalenummer)
             </td>
@@ -69,16 +88,16 @@
                 @Html.DisplayFor(modelItem => item.Medarbejderantal)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a class="noviyellow btn float-right" asp-page="./Edit" asp-route-id="@item.ID">Edit</a> 
+                <a class="noviyellow btn float-right mr-1" asp-page="./Details" asp-route-id="@item.ID">Details</a> 
+                <a class="noviyellow btn float-right mr-1" asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
         }
     </tbody>
 </table>
+  </body>
 }
-
 
 else
 
@@ -105,8 +124,7 @@ else
                 <div class="row">
                     <div class="col-12">
                         <form class="searchbox text-center">
-                            <input type="text" placeholder="Søg efter navnet på virksomheden" class=" searchbar novidgrey novifont" asp-for="SearchString" />
-                            <!--<input type="submit" value="Filter" /> -->
+                            <input type="text" placeholder="Søg efter navnet på lokalet" class=" searchbar novidgrey novifont" asp-for="SearchString" />
                             <button type="submit" class="searchbtn novidgrey"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
