--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Edit.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Edit.cshtml
@@ -4,56 +4,87 @@
 @{
     ViewData["Title"] = "Edit";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-<h1>Edit</h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/core.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <title>Startside</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-<h4>VirksomhederInfo</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="VirksomhederInfo.ID" />
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.Navn" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.Navn" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.Navn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.CVR" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.CVR" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.CVR" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.Medarbejdere" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.Medarbejdere" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.Medarbejdere" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.Lokale" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.Lokale" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.Lokale" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.Findvej" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.Findvej" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.Findvej" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VirksomhederInfo.ID" class="control-label"></label>
-                <input asp-for="VirksomhederInfo.ID" class="form-control" />
-                <span asp-validation-for="VirksomhederInfo.ID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <h1>Edit</h1>
+
+    <h4>VirksomhederInfo</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="VirksomhederInfo.ID" />
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.Navn" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.Navn" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.Navn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.CVR" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.CVR" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.CVR" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.Medarbejdere" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.Medarbejdere" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.Medarbejdere" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.Lokale" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.Lokale" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.Lokale" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.Findvej" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.Findvej" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.Findvej" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VirksomhederInfo.ID" class="control-label"></label>
+                    <input asp-for="VirksomhederInfo.ID" class="form-control" />
+                    <span asp-validation-for="VirksomhederInfo.ID" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
+}
+
+else
+
+{
+    <p class="novifont headline mt-3 mb-3">
+        Du skal være logget ind for at redigere i databasen.
+    </p>
+    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
+        Klik her for at logge ind
+    </button>
+    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+        Klik her for at returnere til forsiden
+    </button>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
