--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/wwwroot/css/core.css
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/wwwroot/css/core.css
@@ -12,7 +12,7 @@
 }
 
 .button-lg {
-    padding: 2.5rem 5rem;
+    padding: 20%;
 }
 
 .loginbutton {
@@ -29,14 +29,15 @@
     text-align: center;
 }
 
+.create {
+    border-color: rgb(243,180,27);
+}
 
 .faqquestions {
     font-size: 120%;
     margin-left: 3%;
     margin-top: 1%;
 }
-
-
 
 .findsomethingbox {
     border-color: rgb(243, 180, 27);
@@ -105,7 +106,6 @@
     color: rgb(102, 109, 119);
     font-family: Oswald;
 }
-
 
 .novigreen {
     background-color: rgb(162,215,100);
