--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
@@ -2,7 +2,7 @@
 @model LoginOgInfo.Pages.MedarbejderPage.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Medarbejder Information";
 }
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
@@ -19,8 +19,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-
-<h1>Details</h1>
 @if (SignInManager.IsSignedIn(User))
 {
     <div>
@@ -84,9 +82,6 @@ else
                     <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
                     <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
                 </div>
-                <div class="col-9">
-                    <input type="text" placeholder="Søg efter virksomhed eller lokale.." class="searchbar novifont" ;>
-                </div>
             </div>
         </div>
 
@@ -130,11 +125,85 @@ else
                         <p class="findsomethingboxheader novifont">
                             Sådan finder du @Html.DisplayFor(model => model.MedarbejderInfo.Navn)
                         </p><p class="normaltext novifont">
-                            
+
                         </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
+                            <div class="container-contact2">
+                                <div class="wrap-contact2">
+                                    <span class="contact2-form-title">
+                                        Contact Us
+                                    </span>
+
+                                    <div class="wrap-input2 validate-input" data-validate="Name is required">
+                                        <input class="input2" type="text" id="name" value="fucking syg i hovedet">
+                                        <span class="focus-input2" data-placeholder="NAME"></span>
+                                    </div>
+
+                                    <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                                        <input class="input2" type="text" value="@Html.DisplayFor(model => model.MedarbejderInfo.Email)" id="email">
+                                        <span class="focus-input2" data-placeholder="EMAIL"></span>
+                                    </div>
+
+                                    <div class="wrap-input2 validate-input" data-validate="Message is required">
+                                        <textarea class="input2" id="message">@Html.DisplayFor(model => model.MedarbejderInfo.Navn)</textarea>
+                                        <span class="focus-input2" data-placeholder="MESSAGE"></span>
+                                    </div>
+
+                                    <div class="container-contact2-form-btn">
+                                        <div class="wrap-contact2-form-btn">
+                                            <div class="contact2-form-bgbtn"></div>
+                                            <button class="contact2-form-btn" onclick="SendEmail()">
+                                                Send Your Message
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
 }
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.full.min.js"></script>
+
+
+
+<script src="../wwwroot/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="../vendor/bootstrap/js/popper.js"></script>
+<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="../vendor/select2/select2.min.js"></script>
+<script src="../js/main.js"></script>
+
+<script>
+    function SendEmail(){
+
+        $.ajax(
+            {
+                type: "POST",
+                url: '@Url.Action("SendEmail", "/Controllers/MailSenderController")',
+                data: {
+                    Name: $("#name").val(),
+                    Email: $("#email").val(),
+                    Message: $("#message").val()
+                },
+                error: function (result) {
+                    console.log(result);
+                },
+                success: function (result) {
+                    alert(result);
+                    $("#name").val("");
+                    $("#email").val("");
+                    $("#message").val("");
+                }
+            });
+    }
+</script>
