--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
@@ -40,50 +40,50 @@
 
         @if (SignInManager.IsSignedIn(User))
         {
-        <div class="row">
-            <div class="col-12 mt-5 mb-5 text-center">
-                <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
-                        onclick="window.location.href = '/Identity/Account/AdminNavi'">
-                    Tryk her
-                </button>
+            <div class="row">
+                <div class="col-12 mt-5 mb-5 text-center">
+                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
+                            onclick="window.location.href = '/Identity/Account/AdminNavi'">
+                        Tryk her
+                    </button>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-12 mt-5">
-                <button type="button" class="btn btn-primary btn-sm novifont noviyellow button text-center float-left"
-                        onclick="window.location.href = '/identity/account/AdminNavi'">
-                    Admin Panel
-                </button>
+            <div class="row">
+                <div class="col-12 mt-5">
+                    <button type="button" class="btn btn-primary btn-sm novifont noviyellow button text-center float-left"
+                            onclick="window.location.href = '/identity/account/AdminNavi'">
+                        Admin Panel
+                    </button>
+                </div>
             </div>
-        </div>
         }
         else
         {
-        <div class="row">
-            <div class="col-12 mt-5 mb-5 text-center">
-                <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
-                        onclick="window.location.href = '/VirksomhederPage'">
-                    Tryk her
-                </button>
+            <div class="row">
+                <div class="col-12 mt-5 mb-5 text-center">
+                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button text-center"
+                            onclick="window.location.href = '/VirksomhederPage'">
+                        Tryk her
+                    </button>
+                </div>
             </div>
-        </div>
 
 
 
-        <div class="row">
-            <div class="col-12 mt-5">
-                <button type="button" class="btn btn-primary btn-sm novifont noviyellow button text-center float-left"
-                        onclick="window.location.href = '/identity/account/login'">
-                    Login
-                </button>
+            <div class="row">
+                <div class="col-12 mt-5">
+                    <button type="button" class="btn btn-primary btn-sm novifont noviyellow button text-center float-left"
+                            onclick="window.location.href = '/identity/account/login'">
+                        Login
+                    </button>
+                </div>
             </div>
-        </div>
         }
     </div>
 </body>
 
-<!--Dette er vores mailknap-->
+<!--Dette er vores mailknap
 <script>
     function sendMail() {
         var link = "mailto:Andreas.troldborg@gmail.com"
@@ -95,3 +95,4 @@
         window.location.href = link;
     }
 </script>
+-->
