--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
@@ -117,7 +117,19 @@ else
                         </p>
                     </div>
                     <div class="col-6">
-                        <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
+                        <div class="row">
+                            <div class="1">
+                                <input class="collapse" type="text" id="name" value="Gæst">
+                                <input class="collapse" type="text" value="@Html.DisplayFor(model => model.MedarbejderInfo.Email)" id="email"/>
+                                <textarea class="collapse" id="message">Du har en gæst der er ankommet ved hovedindgangen</textarea>
+                            </div>
+                            <div class="col-11">
+                                <img src="/Pictures/bell.png" alt="Notifikation" class="bell float-right mb-2" onclick="SendEmail()" />
+                                <p class="novifont">
+                                    Tryk på klokken for at notificerer om din ankomst
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -131,57 +143,28 @@ else
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
-                            <div class="container-contact2">
-                                <div class="wrap-contact2">
-                                    <span class="contact2-form-title">
-                                        Contact Us
-                                    </span>
-
-                                    <div class="wrap-input2 validate-input" data-validate="Name is required">
-                                        <input class="input2" type="text" id="name" value="fucking syg i hovedet">
-                                        <span class="focus-input2" data-placeholder="NAME"></span>
-                                    </div>
-
-                                    <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                                        <input class="input2" type="text" value="@Html.DisplayFor(model => model.MedarbejderInfo.Email)" id="email">
-                                        <span class="focus-input2" data-placeholder="EMAIL"></span>
-                                    </div>
-
-                                    <div class="wrap-input2 validate-input" data-validate="Message is required">
-                                        <textarea class="input2" id="message">@Html.DisplayFor(model => model.MedarbejderInfo.Navn)</textarea>
-                                        <span class="focus-input2" data-placeholder="MESSAGE"></span>
-                                    </div>
-
-                                    <div class="container-contact2-form-btn">
-                                        <div class="wrap-contact2-form-btn">
-                                            <div class="contact2-form-bgbtn"></div>
-                                            <button class="contact2-form-btn" onclick="SendEmail()">
-                                                Send Your Message
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </body>
 }
 
+
+
+<!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.full.min.js"></script>
+-->
 
 
-
-<script src="../wwwroot/vendor/jquery/jquery-3.2.1.min.js"></script>
-<script src="../vendor/bootstrap/js/popper.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="../vendor/select2/select2.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="/vendor/bootstrap/js/popper.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/vendor/select2/select2.min.js"></script>
+<script src="/js/main.js"></script>
 
 <script>
     function SendEmail(){
@@ -189,7 +172,7 @@ else
         $.ajax(
             {
                 type: "POST",
-                url: '@Url.Action("SendEmail", "/Controllers/MailSenderController")',
+                url: '@Url.Action("SendEmail", "MailSender")',
                 data: {
                     Name: $("#name").val(),
                     Email: $("#email").val(),
